add index.html and css files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <a href="index.html"> Home </a>
                      </li class=nav-li>
                      <li class="nav-li">
-                        <a hreft="portfolio.html"> Portfolio
+                        <a href="portfolio.html"> Portfolio
                             </a>
                         </li>
 
@@ -34,7 +34,8 @@
                      <ul>
                       <li>Band</li>
                       <li>Baseball</li>
-                      <li>Clothes</li>
+                      <li>Clothes
+                      </li>
                      </ul>
                     </div>
                     <!-- Sidebar section -->
