add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <main>
                 <div>
                     <!-- Content section-->
-                <div class="content"
+                <div class="content">
                     <h2> Louis </h2>
                     <p> Student at livingston</p>
                      <!-- Interests section -->
