--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,9 @@
-<! DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
  <head>
-    <title> YungeenLou's Website
-    </title>
+    <title> YungeenLou's Website</title>
+      <link rel="stylesheet" href="style.css">
+    
  </head>
 
 <body>
@@ -22,7 +23,12 @@
       <main>
         <div class="content">
           <h1>portfolio</h1>
-          <ul id="portfolio"></ul>
+          <ul id="portfolio">
+            <li><a href="projects/platformer/">Platform : A cannon - dodging, collectible - grabbing adventure game for hallebot</a>
+              </li>
+              <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
+              <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
+          </ul>
         </div>
       </main>
     </div>
