add index.html and css files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
                 <ul id="nav-ul">
                     <li class="nav-li">
                         <a href="index.html"> Home </a>
-                     </li class=nav-li>
                      <li class="nav-li">
                         <a href="portfolio.html"> Portfolio
                             </a>
@@ -32,7 +31,7 @@
                     <h2> Louis </h2>
                     <p id="buns"> Student at livingston</p>
                      <!-- Interests section -->
-                    <div> 
+                    <div id="interests"> 
                      <h3> Interests</h3>
                      <ul>
                       <li>Band</li>
@@ -40,6 +39,7 @@
                       <li>Clothes
                       </li>
                      </ul>
+                    </div>
                     </div>
                  </main>
         </div>
