--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -67,6 +67,7 @@
 
 			// TODO 2 - Variable declarations 
 			var positionX = 0;
+			var myVariable = someValue;
 
 
 
@@ -80,6 +81,7 @@
 				moveBoxTo(positionX);
 				
 
+
 			};
 
 			/* 
@@ -88,6 +90,9 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
+				positionX = 0;
+				changeBoxText(1);
+				changeBoxText(points);
 
 
 			};
