add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -9,7 +9,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(117, 1, 233);
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
@@ -18,6 +18,10 @@
 			top: 100px;
 			/* Change me! */
 			left: 200px;
+			body {
+ background-image: url("paper.gif");
+ background-color: #010000;
+       }
 		}
 
 		.board {
